<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/anime"
        android:icon="@drawable/ic_round_movie_filter_24"
        android:title="@string/anime" />
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_shinigami_calendar"
        android:title="@string/release_calendar" />
    <item
        android:id="@+id/social"
        android:icon="@drawable/ic_shinigami_social"
        android:title="@string/activities" />
    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_shinigami_library"
        android:title="@string/library" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_shinigami_profile"
        android:title="@string/profile" />
</menu>