<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/userStatsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileUserStatsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/stats"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.58"
                        android:text="@string/episodes_watched"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/statsEpisodesWatched"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.58"
                        android:text="@string/days_watched"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/statsDaysWatched"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.58"
                        android:text="@string/anime_mean_score"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/statsAnimeMeanScore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:textAlignment="textEnd" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileUserBioTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/poppins_bold"
                android:padding="8dp"
                android:text="@string/about_me"
                android:textSize="18sp" />

            <WebView
                android:id="@+id/profileUserBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:nestedScrollingEnabled="true"
                android:padding="16dp"
                android:textAlignment="textStart"
                tools:text="@string/slogan" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
